Fix dark mode

--- a/theme/basic.css
+++ b/theme/basic.css
@@ -2,6 +2,7 @@
 
 :root {
   --bg: #010e19;
+  --fg: #edd488;
   --bg-main: #000d;
   --heading: #cb2408cc;
   --bg-heading1: #cb240844;
